[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "time_series_deep_clustering"
version = "0.0.1"
description = "A small example package"
authors = [
  { name = "Baptiste Lafabregue" },
  { name = "Björn Sonnenschein" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests>2",
    "matplotlib>=3.0.0",
    "numpy>=1.19.0",
    "scikit_learn>=0.24.1",
    "scipy>=1.4.0",
    "sktime>=0.5.2",
    "tensorflow>=2.3.0",
    "tensorflow-addons>=0.12.0",
    "tslearn>=0.5.0.5",
    "umap_learn>= 0.5.1",
    "kshape @ git+https://github.com/TheDatumOrg/kshape-python@778e735",
    "VaDER @ git+https://github.com/johanndejong/VaDER@6cce808"
]

[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

